; ModuleID = '/home/carl/AnghaBench/esp-idf/components/lwip/port/esp32/debug/extr_lwip_debug.c_dbg_lwip_tcp_pcb_list_show.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/lwip/port/esp32/debug/extr_lwip_debug.c_dbg_lwip_tcp_pcb_list_show.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tcp_pcb = type { %struct.tcp_pcb* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.tcp_pcb*)* @dbg_lwip_tcp_pcb_list_show to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @dbg_lwip_tcp_pcb_list_show(%struct.tcp_pcb* %0) #0 {
  %2 = alloca %struct.tcp_pcb*, align 8
  store %struct.tcp_pcb* %0, %struct.tcp_pcb** %2, align 8
  br label %3

3:                                                ; preds = %6, %1
  %4 = load %struct.tcp_pcb*, %struct.tcp_pcb** %2, align 8
  %5 = icmp ne %struct.tcp_pcb* %4, null
  br i1 %5, label %6, label %12

6:                                                ; preds = %3
  %7 = load %struct.tcp_pcb*, %struct.tcp_pcb** %2, align 8
  %8 = call i32 @dbg_lwip_tcp_pcb_one_show(%struct.tcp_pcb* %7)
  %9 = load %struct.tcp_pcb*, %struct.tcp_pcb** %2, align 8
  %10 = getelementptr inbounds %struct.tcp_pcb, %struct.tcp_pcb* %9, i32 0, i32 0
  %11 = load %struct.tcp_pcb*, %struct.tcp_pcb** %10, align 8
  store %struct.tcp_pcb* %11, %struct.tcp_pcb** %2, align 8
  br label %3

12:                                               ; preds = %3
  ret void
}

declare dso_local i32 @dbg_lwip_tcp_pcb_one_show(%struct.tcp_pcb*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
